--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,8 +1,8 @@
-deploy.ant.properties.file=C:\\Users\\Ponce\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv3861208584.properties
+deploy.ant.properties.file=/home/roque/.netbeans/8.1/config/GlassFishEE6/Properties/gfv31193111141.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Users/Ponce/AppData/Roaming/NetBeans/8.2/config/GF_4.1.1/domain1
-j2ee.server.home=C:/Program Files/glassfish-4.1.1/glassfish
-j2ee.server.instance=[C:\\Program Files\\glassfish-4.1.1\\glassfish;C:\\Program Files\\glassfish-4.1.1\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=C:/Program Files/glassfish-4.1.1
-selected.browser=Chrome.INTEGRATED
-user.properties.file=C:\\Users\\Ponce\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+j2ee.server.domain=/home/roque/GlassFish_Server/glassfish/domains/domain1
+j2ee.server.home=/home/roque/GlassFish_Server/glassfish
+j2ee.server.instance=[/home/roque/GlassFish_Server/glassfish:/home/roque/GlassFish_Server/glassfish/domains/domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=/home/roque/GlassFish_Server
+selected.browser=SL[/Browsers/FirefoxBrowser
+user.properties.file=/home/roque/.netbeans/8.1/build.properties
